feat(catalog): qualify Qwen3 native RAG